# nanobot-web

./: .gitignore  LICENSE  Procfile  README.md  pyproject.toml
.cursor/rules/: pep8-python.mdc  python-venv.mdc
src/nanobot_console/: __main__.py  cli.py  dev.py  web_dev_wait.py
src/nanobot_console/server/: __init__.py  app.py  bot_workspace.py  channels_service.py  config.py  config_loader.py  dashboard_metrics.py  dependencies.py  mcp_config.py  nanobot_user_config.py  session_store.py
src/nanobot_console/server/config/: __init__.py  loader.py  schema.py
src/nanobot_console/server/models/: __init__.py  activity.py  agents.py  alerts.py  base.py  bot_files.py  bots.py  channels.py  chat.py  config.py  cron.py  echo.py  env.py  errors.py  health.py  health_audit.py  mcp.py  memory.py  plans.py  sessions.py  skills.py  status.py  tools.py  usage.py  workspace.py
src/nanobot_console/server/routers/: __init__.py  health.py
src/nanobot_console/server/routers/v1/: __init__.py  activity.py  agents.py  alerts.py  bot_files.py  bots.py  channels.py  chat.py  config.py  control.py  cron.py  env.py  health.py  health_audit.py  mcp.py  memory.py  plans.py  sessions.py  skills.py  status.py  tools.py  usage.py  workspace.py
src/nanobot_console/web/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/nanobot_console/web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src/nanobot_console/web/src/api/: client.ts  queue.ts  types.ts  types_agents.ts  types_plans.ts  types_queue.ts
src/nanobot_console/web/src/components/: Layout.tsx  Markdown.tsx  ProfessionalGantt.css  ProfessionalGantt.tsx  SubagentPanel.tsx  ToastBridge.tsx  WebSocketDebugPanel.tsx
src/nanobot_console/web/src/hooks/: useNanobotChannelWebSocket.ts  useWebSocket.ts
src/nanobot_console/web/src/i18n/: index.ts
src/nanobot_console/web/src/i18n/locales/: en.json  zh.json
src/nanobot_console/web/src/pages/: Activity.tsx  Agents.tsx  BotProfile.tsx  Bots.tsx  Channels.tsx  Chat.tsx  Cron.tsx  Dashboard.tsx  Health.tsx  Logs.tsx  MCPServers.tsx  Memory.tsx  Plans.tsx  Queue.tsx  Sessions.tsx  Settings.tsx  Skills.tsx  Workspace.tsx
src/nanobot_console/web/src/store/: index.ts
src/nanobot_console/web/src/utils/: format.ts  toolCalls.ts
src/nanobot_ext/: __init__.py
src/nanobot_ext/channels/: __init__.py  ws.py
tests/: test_api_v1_stub.py  test_channels_api.py  test_config_env_api.py  test_dashboard_api.py
