[project]
name = "nanobot-web"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "nanobot-web contributors" }
]
keywords = []
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "nanobot-ai>=0.1.4.post6",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = []

[project.urls]
Homepage = ""
Documentation = ""
Repository = ""

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nanobot_ext"]

[project.entry-points."nanobot.channels"]
ws = "nanobot_ext.channels.ws:WebSocketChannel"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = false
