[project]
name = "nanobot-web"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "nanobot-web contributors" }
]
keywords = []
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Pinned to branch tip for reproducible installs; bump when you need newer nanobot.
    "nanobot-ai @ git+https://github.com/JackLuguibin/nanobot@3c75fde938b539944f26583ce89e4bff17d16efc",
    "websockets>=12",
    "loguru>=0.7.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "honcho>=1.1.0"
]

# Dev install: use scripts/install-dev.sh (or `pip install --upgrade -e ".[dev]"`) so
# nanobot-ai is re-fetched from Git. Plain `pip install -e ".[dev]"` may keep a
# cached revision.
#
# Editable install only links nanobot-web sources. To hack nanobot in a separate
# clone instead of Git, override the dependency, e.g.:
#   .venv/bin/pip uninstall -y nanobot-ai
#   .venv/bin/pip install -e ../nanobot

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = ""
Documentation = ""
Repository = ""

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nanobot_console"]

[project.scripts]
nanobot_console = "nanobot_console.cli:main"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
    "/Procfile",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = false
